re-add the ant-opts & skip the ant package part